fixed header z-index unset

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body{
 	width: 100%;
 	top: 0;
 	font-weight: 300;
+	z-index: 100;
  }
 
  .header__title {
